--- a/jenkins_home/jobs/FirstJob/builds/13/build.xml
+++ b/jenkins_home/jobs/FirstJob/builds/13/build.xml
@@ -5,13 +5,13 @@
       <safeParameters class="sorted-set"/>
       <parameters>
         <hudson.model.StringParameterValue>
-          <name>IMAGE_NAME</name>
+          <name>GIT_APP_URL</name>
           <description></description>
-          <value>consul_local</value>
+          <value>https://github.com/shmfyb/fyb-test.git</value>
         </hudson.model.StringParameterValue>
       </parameters>
       <parameterDefinitionNames>
-        <string>IMAGE_NAME</string>
+        <string>GIT_APP_URL</string>
       </parameterDefinitionNames>
     </hudson.model.ParametersAction>
     <hudson.model.CauseAction>
@@ -25,15 +25,15 @@
       </causeBag>
     </hudson.model.CauseAction>
   </actions>
-  <queueId>12</queueId>
-  <timestamp>1599939498254</timestamp>
-  <startTime>1599939498267</startTime>
+  <queueId>22</queueId>
+  <timestamp>1599941706365</timestamp>
+  <startTime>1599941706376</startTime>
   <result>SUCCESS</result>
-  <duration>120875</duration>
+  <duration>5640</duration>
   <charset>UTF-8</charset>
   <keepLog>false</keepLog>
   <builtOn></builtOn>
-  <workspace>/var/jenkins_home/workspace/second_job</workspace>
+  <workspace>/var/jenkins_home/workspace/FirstJob</workspace>
   <hudsonVersion>2.249.1</hudsonVersion>
   <scm class="hudson.scm.NullChangeLogParser"/>
   <culprits class="com.google.common.collect.EmptyImmutableSortedSet"/>
