--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     command: server
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ${PWD}/conf/:/consul/conf
 
   agent:
     image: consul_local
@@ -28,4 +29,5 @@ services:
       - server
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ${PWD}/consul.d/:/consul/consul.d/
     command: agent
