--- a/jenkins_home/jobs/test_set_value/builds/6/build.xml
+++ b/jenkins_home/jobs/test_set_value/builds/6/build.xml
@@ -5,13 +5,19 @@
       <safeParameters class="sorted-set"/>
       <parameters>
         <hudson.model.StringParameterValue>
-          <name>IMAGE_NAME</name>
-          <description></description>
-          <value>consul_local</value>
+          <name>KEY</name>
+          <description>Name of key to set</description>
+          <value>test</value>
+        </hudson.model.StringParameterValue>
+        <hudson.model.StringParameterValue>
+          <name>VALUE</name>
+          <description>value to set </description>
+          <value>SHIMON_TO_FYBER</value>
         </hudson.model.StringParameterValue>
       </parameters>
       <parameterDefinitionNames>
-        <string>IMAGE_NAME</string>
+        <string>KEY</string>
+        <string>VALUE</string>
       </parameterDefinitionNames>
     </hudson.model.ParametersAction>
     <hudson.model.CauseAction>
@@ -25,15 +31,15 @@
       </causeBag>
     </hudson.model.CauseAction>
   </actions>
-  <queueId>31</queueId>
-  <timestamp>1599944388808</timestamp>
-  <startTime>1599944388821</startTime>
+  <queueId>45</queueId>
+  <timestamp>1599948598132</timestamp>
+  <startTime>1599948598145</startTime>
   <result>SUCCESS</result>
-  <duration>92727</duration>
+  <duration>385</duration>
   <charset>UTF-8</charset>
   <keepLog>false</keepLog>
   <builtOn></builtOn>
-  <workspace>/var/jenkins_home/workspace/second_job</workspace>
+  <workspace>/var/jenkins_home/workspace/test_set_value</workspace>
   <hudsonVersion>2.249.1</hudsonVersion>
   <scm class="hudson.scm.NullChangeLogParser"/>
   <culprits class="com.google.common.collect.EmptyImmutableSortedSet"/>
